# strumbot-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  emojis.txt  example-config.json
.cargo/: config.toml
.github/workflows/: artifact.yml  docker.yml  rust-clippy.yml  tests.yml
commons/: Cargo.toml
commons/src/: errors.rs  lib.rs  util.rs
database-api/: Cargo.toml
database-api/src/: error.rs  file.rs  lib.rs
discord-api/: Cargo.toml
discord-api/src/: commands.rs  config.rs  lib.rs  webhook.rs
main/: Cargo.toml
main/src/: config.rs  main.rs
src/: error.rs  main.rs  util.rs  watcher.rs
src/config/: errors.rs  mod.rs
src/database/: file.rs
src/discord/: commands.rs  mod.rs  webhook.rs
src/twitch/: client.rs  error.rs  mod.rs  model.rs  oauth.rs
strumbot/: Cargo.toml
strumbot/src/: config.rs  errors.rs  main.rs  watcher.rs
twitch-api/: Cargo.toml
twitch-api/src/: client.rs  config.rs  error.rs  lib.rs  model.rs  oauth.rs
