[workspace]
members = [
    "commons",
    "database-api",
    "discord-api",
    "twitch-api",
    "main"
]

[workspace.package]
name = "strumbot"
version = "1.2.5"
edition = "2021"

[workspace.dependencies]
twilight-http-ratelimiting = "0.14"
twilight-model = "0.14"
serde_json = "1.0"
url = "2.2"
bytes = "1"
lru = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
emojis = "0.6"
fxhash = "0.2"

[workspace.dependencies.once_cell]
version = "1"
default-features = false

[workspace.dependencies.hashbrown]
version = "0.13"
features = ["serde"]

[workspace.dependencies.futures]
version = "0.3"
default-features = false

[workspace.dependencies.trust-dns-resolver]
version = "0.21"
default-features = false
features = ["tokio-runtime"]

[workspace.dependencies.twilight-util]
version = "0.14"
default-features = false
features = ["builder"]

[workspace.dependencies.twilight-http]
version = "0.14"
features = ["decompression", "rustls-webpki-roots", "trust-dns"]

[workspace.dependencies.twilight-gateway]
version = "0.14"
default-features = false
features = ["rustls-webpki-roots", "zlib-stock"]

[workspace.dependencies.serde]
version = "1.0"
features = ["rc"]

[workspace.dependencies.regex]
version = "1.6"

[workspace.dependencies.tokio]
version = "1.21"
features = ["macros", "rt-multi-thread", "fs", "sync"]
default-features = false

[workspace.dependencies.reqwest]
version = "0.11"
features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "brotli",
    "trust-dns",
]
default-features = false

[workspace.dependencies.eos]
features = ["alloc", "parsing", "serde", "macros"]
git = "https://github.com/Rapptz/eos"

[profile.release]
lto = true
strip = true
incremental = true
overflow-checks = false
opt-level = "z"
panic = "abort"