[workspace]
members = ["commons", "database-api", "discord-api", "strumbot", "twitch-api"]
resolver = "3"

[workspace.package]
version = "1.2.12"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
twilight-http-ratelimiting = "0.17"
twilight-model = "0.17"
serde_json = "1.0"
bytes = "1"
lru = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[workspace.dependencies.once_cell]
version = "1"
default-features = false

[workspace.dependencies.hashbrown]
version = "0.16"
features = ["serde"]

[workspace.dependencies.futures]
version = "0.3"
default-features = false

[workspace.dependencies.trust-dns-resolver]
version = "0.23"
default-features = false
features = ["tokio-runtime"]

[workspace.dependencies.twilight-util]
version = "0.17"
default-features = false
features = ["builder"]

[workspace.dependencies.twilight-http]
version = "0.17"
features = ["decompression", "rustls-webpki-roots"]

[workspace.dependencies.twilight-gateway]
version = "0.17"
default-features = false
features = ["rustls-webpki-roots"]

[workspace.dependencies.serde]
version = "1.0"
features = ["rc"]

[workspace.dependencies.regex]
version = "1.12"

[workspace.dependencies.tokio]
version = "1.49"
features = ["macros", "rt-multi-thread", "fs", "sync"]
default-features = false

[workspace.dependencies.reqwest]
version = "0.12"
features = [
    "json",
    "rustls-tls",
    "rustls-tls-webpki-roots",
    "brotli",
    "trust-dns",
]
default-features = false

[workspace.dependencies.eos]
features = ["alloc", "parsing", "serde", "macros"]
git = "https://github.com/Rapptz/eos"

[profile.release]
lto = true
strip = true
incremental = true
overflow-checks = false
opt-level = "z"
panic = "abort"
