[package]
name = "discord-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
twilight-http-ratelimiting = { workspace = true }
twilight-model = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dependencies.commons]
path = "../commons"

[dependencies.trust-dns-resolver]
workspace = true
default-features = false
features = ["tokio-runtime"]

[dependencies.twilight-util]
workspace = true
default-features = false
features = ["builder"]

[dependencies.twilight-http]
workspace = true
features = ["decompression", "rustls-webpki-roots"]

[dependencies.twilight-gateway]
workspace = true
default-features = false
features = ["rustls-webpki-roots"]

[dependencies.hashbrown]
workspace = true
features = ["serde"]

[dependencies.regex]
workspace = true

[dependencies.futures]
workspace = true
default-features = false

[dependencies.serde]
workspace = true
features = ["rc", "derive"]
